# tc-acls-sysrepo-plugin

./: .gitignore  CMakeLists.txt  CompileOptions.cmake  README.md
src/: main.c  plugin.c  plugin.h
src/plugin/: common.h  context.h  ly_tree.c  ly_tree.h  store.c  store.h  types.h
src/plugin/api/: check.c  check.h  load.c  load.h  store.c  store.h  tcnl.c  tcnl.h
src/plugin/api/acls/: acl_change.c  acl_change.h  change.c  change.h  store.c  store.h
src/plugin/api/acls/acl/: ace_change.c  ace_change.h  change.c  change.h
src/plugin/api/acls/acl/aces/: change.c
src/plugin/api/acls/acl/aces/ace/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/actions/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/eth/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/icmp/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/ipv4/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/ipv6/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/tcp/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/tcp/destination-port/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/tcp/source-port/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/udp/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/udp/destination-port/: change.c  change.h
src/plugin/api/acls/acl/aces/ace/matches/udp/source-port/: change.c  change.h
src/plugin/api/acls/attachment-points/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/plugin/api/acls/attachment-points/interface/: change.c  change.h
src/plugin/api/acls/attachment-points/interface/egress/acl-sets/: change.c  change.h
src/plugin/api/acls/attachment-points/interface/egress/acl-sets/acl-set/: change.c  change.h
src/plugin/api/acls/attachment-points/interface/ingress/acl-sets/: change.c  change.h
src/plugin/api/acls/attachment-points/interface/ingress/acl-sets/acl-set/: change.c  change.h
src/plugin/api/attachment-points/: attachment_points_change.c  attachment_points_change.h
src/plugin/data/acls/: acl.c  acl.h
src/plugin/data/acls/acl/: aces.c  aces.h  linked_list.h
src/plugin/data/attachment_points/: attachment_points.c  attachment_points.h  linked_list.h
src/plugin/running/: store.c  store.h
src/plugin/startup/: load.c  load.h  store.c  store.h
src/plugin/subscription/: change.c  change.h  operational.c  operational.h  rpc.c  rpc.h
